<resources>
    <string name="app_name">My Application</string>
    <string name="unit_conversion">Unit Conversion</string>
    <string name="equations">Equations</string>
    <string name="length">Length</string>
    <string name="enter_value_to_convert_from">Enter value to convert from</string>
    <string name="enter_value_to_convert_to">Enter value to convert to</string>
    <string name="result">Result:</string>
    <string name="calculator">Calculator</string>
    <string name="equalsString">=</string>
    <string name="decimalString">.</string>
    <string name="deleteString">⌫</string>
    <string name="zeroString">0</string>
    <string name="plusString">+</string>
    <string name="threeString">3</string>
    <string name="twoString">2</string>
    <string name="oneString">1</string>
    <string name="minusString">-</string>
    <string name="sixString">6</string>
    <string name="sevenString">7</string>
    <string name="eightString">8</string>
    <string name="fiveString">5</string>
    <string name="fourString">4</string>
    <string name="multiplyString">x</string>
    <string name="multiplyString1">×</string>
    <string name="nineString">9</string>
    <string name="divideString">÷</string>
    <string name="rightBracket">)</string>
    <string name="leftBracket">(</string>
    <string name="clearButton">C</string>
    <string name="bmi">BMI</string>
    <string name="dates">Dates</string>
    <string name="area">Area</string>
    <string name="base">Base</string>
    <string-array name="convertFromLengthArray">
        <item>Inches</item>
        <item>Miles</item>
        <item>Metres</item>
        <item>Centimetres</item>
        <item>Millimetres</item>
        <item>Feet</item>
        <item>Yards</item>
        <item>Gigametres</item>
        <item>Megametres</item>
        <item>Kilometres</item>
        <item>Decimetres</item>
        <item>Micrometres</item>
        <item>Nanometres</item>
    </string-array>
    <string-array name="convertFromAreaArray">
        <item>Square Metres</item>
        <item>Square Miles</item>
        <item>Square Yards</item>
        <item>Square Kilometres</item>
        <item>Square Centimetres</item>
        <item>Square Millimetres</item>
        <item>Square Feet</item>
        <item>Square Inches</item>
        <item>Square Decimetres</item>
        <item>Square Decametres</item>
        <item>Acres</item>
        <item>Hectares</item>
    </string-array>
    <string-array name="bmiArray">
        <item>Kilograms</item>
        <item>Pounds</item>
    </string-array>
    <string-array name="heightArray">
        <item>Centimetres</item>
        <item>Inches</item>
    </string-array>
    <string-array name="baseArray">
        <item>Binary</item>
        <item>Hex</item>
        <item>Octal</item>
        <item>Decimal</item>
    </string-array>
    <string-array name="tempArray">
        <item>Celsius</item>
        <item>Fahrenheit</item>
        <item>Kelvin</item>
    </string-array>
    <string-array name="timeArray">
        <item>Milliseconds</item>
        <item>Seconds</item>
        <item>Minutes</item>
        <item>Hours</item>
        <item>Days</item>
        <item>Weeks</item>
        <item>Months</item>
        <item>Years</item>
    </string-array>
    <string-array name="dataArray">
        <item>Bits</item>
        <item>Nibbles</item>
        <item>Bytes</item>
        <item>Kilobytes</item>
        <item>Kibibytes</item>
        <item>Megabytes</item>
        <item>Mebibytes</item>
        <item>Gigabytes</item>
        <item>Gibibytes</item>
        <item>Terabytes</item>
        <item>Tebibytes</item>
        <item>Petabytes</item>
        <item>Pebibytes</item>
    </string-array>
    <string-array name="speedArray">
        <item>m/s</item>
        <item>km/h</item>
        <item>mph</item>
        <item>Knots</item>
        <item>fps</item>
        <item>Mach number</item>
    </string-array>
    <string-array name="volumeArray">
        <item>Cubic Metres</item>
        <item>Cubic Miles</item>
        <item>Cubic Yards</item>
        <item>Cubic Kilometres</item>
        <item>Cubic Centimetres</item>
        <item>Cubic Millimetres</item>
        <item>Cubic Feet</item>
        <item>Cubic Inches</item>
        <item>Acre-feet</item>
        <item>Millilitres</item>
        <item>Centilitres</item>
        <item>Litre</item>
        <item>Kilolitre</item>
        <item>Imperial Gallon</item>
        <item>US Gallon</item>
        <item>Imperial Pint</item>
        <item>US Pint</item>
    </string-array>
    <string-array name="massArray">
        <item>Milligrams</item>
        <item>Grams</item>
        <item>Kilograms</item>
        <item>Tonnes</item>
        <item>US Tons</item>
        <item>UK Tons</item>
        <item>Pounds</item>
        <item>Stone</item>
        <item>Ounces</item>
    </string-array>
    <string-array name="velocityArray">
        <item>Distance (m)</item>
        <item>Time (s)</item>
        <item>Speed (m/s)</item>
    </string-array>
    <string-array name="forceEquationArray">
        <item>F=MA</item>
        <item>F=E/D</item>
        <item>F=KΔE</item>
    </string-array>
    <string-array name="forceArray1">
        <item>Force (N)</item>
        <item>Mass (Kg)</item>
        <item>Acceleration (m/s^2)</item>
    </string-array>
    <string-array name="forceArray2">
        <item>Force (N)</item>
        <item>Energy (J)</item>
        <item>Distance (m)</item>
    </string-array>
    <string-array name="forceArray3">
        <item>Force (N)</item>
        <item>Spring Constant</item>
        <item>Extension (m)</item>
    </string-array>
    <string-array name="pressureArray">
        <item>Pressure (Pa)</item>
        <item>Force (N)</item>
        <item>Area (m^2)</item>
    </string-array>
    <string-array name="powerEquationArray">
        <item>P=E/T</item>
        <item>P=IV</item>
    </string-array>
    <string-array name="powerArray">
        <item>Power (W)</item>
        <item>Energy (J)</item>
        <item>Time (s)</item>
    </string-array>
    <string-array name="powerArray1">
        <item>Power (W)</item>
        <item>Current (A)</item>
        <item>Volts (V)</item>
    </string-array>
    <string-array name="accelerationArray">
        <item>Acceleration (m/s^2)</item>
        <item>Time (s)</item>
        <item>Change in velocity (Δv)</item>
    </string-array>
    <string-array name="densityArray">
        <item>Density (kg/m^3)</item>
        <item>Mass (kg)</item>
        <item>Volume (m^3)</item>
    </string-array>
    <string-array name="voltageEquations">
        <item>V=IR</item>
        <item>V=E/Q</item>
        <item>V=P/I</item>
    </string-array>
    <string-array name="voltageArray1">
        <item>Volts (V)</item>
        <item>Current (A)</item>
        <item>Resistance (Ω)</item>
    </string-array>
    <string-array name="voltageArray2">
        <item>Volts (V)</item>
        <item>Energy (J)</item>
        <item>Charge (C)</item>
    </string-array>
    <string-array name="voltageArray3">
        <item>Volts (V)</item>
        <item>Power (W)</item>
        <item>Current (A)</item>
    </string-array>
    <string-array name="frequencyEquations">
        <item>F=V/λ</item>
        <item>F=1/T</item>
    </string-array>
    <string-array name="frequencyArray1">
        <item>Frequency (Hz)</item>
        <item>Time Period (s)</item>
    </string-array>
    <string-array name="frequencyArray2">
        <item>Frequency (Hz)</item>
        <item>Velocity (m/s)</item>
        <item>Wavelength λ (m)</item>
    </string-array>
    <string-array name="keArray">
        <item>Kinetic Energy (J)</item>
        <item>Mass (kg)</item>
        <item>Velocity (m/s)</item>
    </string-array>
    <string-array name="weightArray">
        <item>Weight (N)</item>
        <item>Mass (kg)</item>
        <item>Gravitational Field Strength (N/kg)</item>

    </string-array>
    <string-array name="momentumArray">
        <item>Momentum (kg m/s)</item>
        <item>Mass (kg)</item>
        <item>Velocity (m/s)</item>
    </string-array>
    <string-array name="chargeArray">
        <item>Charge (C)</item>
        <item>Current (A)</item>
        <item>Time (s)</item>
    </string-array>
    <string-array name="Currencies">
        <item>JPY</item>
        <item>CNY</item>
        <item>CHF</item>
        <item>CAD</item>
        <item>MXN</item>
        <item>INR</item>
        <item>BRL</item>
        <item>RUB</item>
        <item>KRW</item>
        <item>IDR</item>
        <item>TRY</item>
        <item>SAR</item>
        <item>SEK</item>
        <item>NGN</item>
        <item>PLN</item>
        <item>ARS</item>
        <item>NOK</item>
        <item>TWD</item>
        <item>IRR</item>
        <item>AED</item>
        <item>COP</item>
        <item>THB</item>
        <item>ZAR</item>
        <item>DKK</item>
        <item>MYR</item>
        <item>SGD</item>
        <item>ILS</item>
        <item>HKD</item>
        <item>EGP</item>
        <item>PHP</item>
        <item>CLP</item>
        <item>PKR</item>
        <item>IQD</item>
        <item>DZD</item>
        <item>KZT</item>
        <item>QAR</item>
        <item>CZK</item>
        <item>PEN</item>
        <item>RON</item>
        <item>VND</item>
        <item>BDT</item>
        <item>HUF</item>
        <item>UAH</item>
        <item>AOA</item>
        <item>MAD</item>
        <item>OMR</item>
        <item>CUC</item>
        <item>BYR</item>
        <item>AZN</item>
        <item>LKR</item>
        <item>SDG</item>
        <item>SYP</item>
        <item>MMK</item>
        <item>DOP</item>
        <item>UZS</item>
        <item>KES</item>
        <item>GTQ</item>
        <item>URY</item>
        <item>HRV</item>
        <item>MOP</item>
        <item>ETB</item>
        <item>CRC</item>
        <item>TZS</item>
        <item>TMT</item>
        <item>TND</item>
        <item>PAB</item>
        <item>LBP</item>
        <item>RSD</item>
        <item>LYD</item>
        <item>GHS</item>
        <item>YER</item>
        <item>BOB</item>
        <item>BHD</item>
        <item>CDF</item>
        <item>PYG</item>
        <item>UGX</item>
        <item>SVC</item>
        <item>TTD</item>
        <item>AFN</item>
        <item>NPR</item>
        <item>HNL</item>
        <item>BIH</item>
        <item>BND</item>
        <item>ISK</item>
        <item>KHR</item>
        <item>GEL</item>
        <item>MZN</item>
        <item>BWP</item>
        <item>PGK</item>
        <item>JMD</item>
        <item>XAF</item>
        <item>NAD</item>
        <item>ALL</item>
        <item>SSP</item>
        <item>MUR</item>
        <item>MNT</item>
        <item>NIO</item>
        <item>LAK</item>
        <item>MKD</item>
        <item>AMD</item>
        <item>MGA</item>
        <item>XPF</item>
        <item>TJS</item>
        <item>HTG</item>
        <item>BSD</item>
        <item>MDL</item>
        <item>RWF</item>
        <item>KGS</item>
        <item>GNF</item>
        <item>SRD</item>
        <item>SLL</item>
        <item>XOF</item>
        <item>MWK</item>
        <item>FJD</item>
        <item>ERN</item>
        <item>SZL</item>
        <item>GYD</item>
        <item>BIF</item>
        <item>KYD</item>
        <item>MVR</item>
        <item>LSL</item>
        <item>LRD</item>
        <item>CVE</item>
        <item>DJF</item>
        <item>SCR</item>
        <item>SOS</item>
        <item>GMD</item>
        <item>KMF</item>
        <item>STD</item>
        <item>XRP</item>
        <item>AUD</item>
        <item>BGN</item>
        <item>BTC</item>
        <item>JOD</item>
        <item>GBP</item>
        <item>ETH</item>
        <item>EUR</item>
        <item>LTC</item>
        <item>NZD</item>









    </string-array>


</resources>