<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calculator"
    style="@style/Theme.Calculator"
    android:background="@drawable/calculator_background">

    <TextView
        android:id="@+id/previousEquation"
        android:layout_width="59dp"
        android:layout_height="22dp"
        android:text=" "
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.828" />

    <TextView
        android:id="@+id/editTextTextPersonName"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:ems="10"
        android:layout_marginBottom="10dp"
        android:text=" "
        android:gravity="right|center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:background="@drawable/textview_border"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="140dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/equalsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equalsString"
            android:textSize="30sp"
            app:layout_constraintStart_toEndOf="@+id/decimalButton"
            app:layout_constraintTop_toBottomOf="@+id/button27"
            android:background="@drawable/equals_background"/>

        <Button
            android:id="@+id/decimalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/decimalString"
            android:textSize="30sp"
            app:layout_constraintStart_toEndOf="@+id/button25"
            app:layout_constraintTop_toBottomOf="@+id/button28"
            android:background="@drawable/button_background"/>

        <Button
            android:id="@+id/button24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deleteString"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="@+id/button38"
            app:layout_constraintStart_toStartOf="@+id/button38"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/delete_background"/>

        <Button
            android:id="@+id/button25"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/zeroString"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="@+id/button28"
            app:layout_constraintStart_toStartOf="@+id/button29"
            app:layout_constraintTop_toBottomOf="@+id/button29"
            android:background="@drawable/button_background"/>

        <Button
            android:id="@+id/button26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plusString"
            android:textSize="30sp"
            app:layout_constraintStart_toEndOf="@+id/button27"
            app:layout_constraintTop_toBottomOf="@+id/button30"
            android:background="@drawable/operators_background"/>

        <Button
            android:id="@+id/button27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/threeString"
            android:textSize="30sp"
            app:layout_constraintStart_toEndOf="@+id/button28"
            app:layout_constraintTop_toBottomOf="@+id/button31"
            android:background="@drawable/button_background"/>

        <Button
            android:id="@+id/button28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twoString"
            android:textSize="30sp"
            app:layout_constraintStart_toEndOf="@+id/button29"
            app:layout_constraintTop_toBottomOf="@+id/button32"
            android:background="@drawable/button_background"/>

        <Button
            android:id="@+id/button29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oneString"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button33"
            android:background="@drawable/button_background"/>

        <Button
            android:id="@+id/button30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minusString"
            android:textSize="30sp"
            app:layout_constraintStart_toEndOf="@+id/button31"
            app:layout_constraintTop_toBottomOf="@+id/button34"
            android:background="@drawable/operators_background"/>

        <Button
            android:id="@+id/button31"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sixString"
            android:textSize="30sp"
            app:layout_constraintStart_toEndOf="@+id/button32"
            app:layout_constraintTop_toBottomOf="@+id/button35"
            android:background="@drawable/button_background"/>

        <Button
            android:id="@+id/button32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fiveString"
            android:textSize="30sp"
            app:layout_constraintStart_toEndOf="@+id/button33"
            app:layout_constraintTop_toBottomOf="@+id/button36"
            android:background="@drawable/button_background"/>

        <Button
            android:id="@+id/button33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fourString"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button37"
            android:background="@drawable/button_background"/>

        <Button
            android:id="@+id/button34"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiplyString1"
            android:textSize="30sp"
            app:layout_constraintStart_toEndOf="@+id/button35"
            app:layout_constraintTop_toBottomOf="@+id/button38"
            android:background="@drawable/operators_background"/>

        <Button
            android:id="@+id/button35"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nineString"
            android:textSize="30sp"
            app:layout_constraintStart_toEndOf="@+id/button36"
            app:layout_constraintTop_toBottomOf="@+id/button39"
            android:background="@drawable/button_background"/>

        <Button
            android:id="@+id/button36"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eightString"
            android:textSize="30sp"
            app:layout_constraintStart_toEndOf="@+id/button37"
            app:layout_constraintTop_toBottomOf="@+id/button21"
            android:background="@drawable/button_background"/>

        <Button
            android:id="@+id/button37"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sevenString"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button40"
            android:background="@drawable/button_background"/>

        <Button
            android:id="@+id/button38"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/divideString"
            android:textSize="30sp"
            app:layout_constraintStart_toEndOf="@+id/button39"
            app:layout_constraintTop_toBottomOf="@+id/button24"
            android:background="@drawable/operators_background"/>

        <Button
            android:id="@+id/button39"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rightBracket"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@+id/button21"
            app:layout_constraintTop_toBottomOf="@+id/button24"
            android:background="@drawable/button_background"/>

        <Button
            android:id="@+id/button40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clearButton"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button24"
            android:background="@drawable/clearbutton_background"/>

        <Button
            android:id="@+id/button21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leftBracket"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@+id/button40"
            app:layout_constraintTop_toBottomOf="@+id/button24"
            android:background="@drawable/button_background"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>