<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/unitConversionButton"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:text="@string/unit_conversion" />

    <Button
        android:id="@+id/equationsButton"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:text="@string/equations"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        />
    <Button
        android:id="@+id/calculatorButton"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:text="@string/calculator"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="500dp"
        />

</RelativeLayout>


