<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".UnitConversion">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ruler"
            android:text="@string/length"
            android:id="@+id/lengthButton"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/lengthButton"
            android:drawableTop="@drawable/ic_action_name"
            android:text="@string/area"
            android:id="@+id/areaButton"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/calendar"
            android:layout_toRightOf="@id/areaButton"
            android:text="@string/dates"
            android:id="@+id/datesButton"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/scale"
            android:layout_toRightOf="@id/datesButton"
            android:text="@string/bmi"
            android:id="@+id/bmiButton"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/base"
            android:text="@string/base"
            android:layout_below="@id/lengthButton"
            android:id="@+id/baseNButton"/>

        <Button
            android:id="@+id/tempButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lengthButton"
            android:layout_toRightOf="@id/baseNButton"
            android:drawableTop="@drawable/thermometer"
            android:text="Temp" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/clock"
            android:text="Time"
            android:layout_toRightOf="@id/tempButton"
            android:layout_below="@id/lengthButton"
            android:id="@+id/timeButton"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/data"
            android:text="Data"
            android:layout_toRightOf="@id/timeButton"
            android:layout_below="@id/lengthButton"
            android:id="@+id/dataButton"/>

        <Button
            android:id="@+id/moneyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/dollar"
            android:layout_below="@id/baseNButton"
            android:text="money" />
        <Button
            android:id="@+id/speedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/moneyButton"
            android:drawableTop="@drawable/speed"
            android:layout_below="@id/baseNButton"
            android:text="Speed" />
        <Button
            android:id="@+id/volumeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/speedButton"
            android:drawableTop="@drawable/volume"
            android:layout_below="@id/baseNButton"
            android:text="Volume" />
        <Button
            android:id="@+id/massButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/mass"
            android:layout_below="@id/baseNButton"
            android:layout_toRightOf="@id/volumeButton"
            android:text="Mass" />
    </RelativeLayout>


</RelativeLayout>